# Parallel-GPT-2

./: .gitmodules  CMakeLists.txt  README.md  gpt2.cpp  gpt2.h  gpt2.ipynb  gpt2.py  layer_norm.h  linear.h  mlp.h  multi_head_attention.h  requirements.txt  temp.py  transformer_block.h  utils.h
